--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -8,7 +8,7 @@ jobs:
               run: echo "Hello, world!"
 
     echo-goodbye:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
         steps:
             - name: Failed Step
               run:
